
2017-11-05  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Animação dos indicators
	* Inicialização de todos os ponteiros que não estavam sendo inicilizados com NULL

2017-11-03  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Added: Forward, rewind indicators and it's callbacks, new launchapp icon

2017-11-02  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Removed: Old indicators images Changed: Fonts size
	* Page indicator

2017-11-01  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Applicações posicionadas, teclas +/- funcionando, iniciando implementação do indicators

2017-10-28  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_create_main_window): Added indicators

2017-10-27  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Image background alterada: jpg(-KB), imagem Debian verde
	* Imagem png
	* Imagem de background alterada para png e usada imagem do Debian
	* launchapps.c (lapps_apply_configuration): Refatoração para evitar processamento do background na inicialização
	* Added: Background Settings dialog
	* launchapps.c (lapps_set_conf): Função lapps_get_wallpaper_conf_path renomeada e criação de diretório de configuração para armazenar o background temporário

2017-10-26  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Labels redimensionados e workaraound para fixar as posições dos ícones

2017-10-25  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_shadow_icons): Função para acrescentar sombra aos ícones

2017-10-24  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Desfeitas alterações para scale prévio da imagem de background e ajustes nas sombra nos nomes das aplicações
	* Redimencionamento da imagem de background ao carregá-la

2017-10-23  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Add: applications names shadow
	* Add: launchapp-bg-default.jpg
	* Add: bg_default, catch MagickWand read image error Removed: bg_pix memory cache