@@ -1,4 +1,8 @@
 
+2017-11-07  Alexandre C Vieira <acamargo.vieira@gmail.com>
+
+	* Funções de manipulação de imagens colocadas em arquivo separado(lappsutil.c), icone definitivo by DevianArt
+
 2017-11-05  Alexandre C Vieira <acamargo.vieira@gmail.com>
 
 	* Animação dos indicators
